--- a/assignment0.html
+++ b/assignment0.html
@@ -7,7 +7,7 @@
 <body>
     <img src="[presidents] (imported)" width="2220" height="1665" border="0" usemap="#map" />
 
-<map name="map">
+<map name="Presidents">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
