--- a/assignment0.html
+++ b/assignment0.html
@@ -5,9 +5,9 @@
     <title>Presidents of the USA</title>
 </head>
 <body>
-    <img src="[presidents] (imported)" width="2220" height="1665" border="0" usemap="#map" />
+    <img src="Presidents.png" width="2220" height="1665" border="0" usemap="#map" />
 
-<map name="Presidents">
+<map name="map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
