--- a/assignment0.html
+++ b/assignment0.html
@@ -5,9 +5,9 @@
     <title>Presidents of the USA</title>
 </head>
 <body>
-    <img src="Presidents.png" usemap="#Presidents" />
+    <img src="Presidents.png" usemap="#presidentsmap" />
 
-<map name="Presidents">
+<map name="presidentsmap">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
