--- a/assignment0.html
+++ b/assignment0.html
@@ -5,9 +5,9 @@
     <title>Presidents of the USA</title>
 </head>
 <body>
-    <img src="Presidents.png" usemap="#presidentsmap" />
+    <img src="Presidents.png" usemap="Presidents.map" />
 
-<map name="presidentsmap">
+<map name="Presidents.map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
@@ -57,5 +57,6 @@
 <area shape="poly" coords="1181,1509,1163,1318,1230,1267,1317,1300,1344,1395,1328,1495" href="GeorgeWBush.mp3" />
 <area shape="poly" coords="1347,1325,1404,1256,1516,1290,1550,1527,1355,1499" href="BarackObama.mp3" />
 </map>
+<iframe name="audio" style="display:none;"></iframe>
 </body>
 </html>
