--- a/assignment0.html
+++ b/assignment0.html
@@ -5,58 +5,59 @@
     <title>Presidents of the USA</title>
 </head>
 <body>
-    <img src="Presidents.png" usemap="Presidents.map" />
+    <img src="[Presidents] (imported)" width="960" height="720" usemap="#map" />
 
-<map name="Presidents.map">
+<map name="map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
 <!-- #$VERSION:2.3 -->
 <!-- #$AUTHOR:dshep -->
-<area shape="poly" coords="151,260,194,219,261,254,286,354,228,430,150,419,119,376,122,274,144,262,183,219,130,275" href="GeorgeWashington.mp3" />
-<area shape="poly" coords="334,253,381,229,448,263,453,382,416,425,333,419,304,360,311,281,319,258,433,234,390,230,443,248,405,228" href="JohnAdams.mp3" />
-<area shape="poly" coords="510,258,552,230,612,231,648,335,621,425,517,426,480,360" href="ThomasJefferson.mp3" />
-<area shape="poly" coords="691,270,718,225,803,235,839,372,763,431,697,420,655,348,655,346,660,342" href="JamesMadison.mp3" />
-<area shape="poly" coords="866,274,890,218,1001,224,1015,402,897,429,855,404,840,293,839,293" href="JamesMonroe.mp3" />
-<area shape="poly" coords="1045,271,1109,206,1189,253,1201,402,1084,429,1022,386,1028,280" href="JohnQuincyAdams.mp3" />
-<area shape="poly" coords="100,548,179,470,270,546,267,695,116,704" href="AndrewJackson.mp3" />
-<area shape="poly" coords="284,526,399,463,453,572,420,702,285,691" href="MartinVanBuren.mp3" />
-<area shape="poly" coords="465,542,525,482,623,512,635,690,464,707" href="WilliamHenryHarrison.mp3" />
-<area shape="poly" coords="639,539,703,468,794,507,798,706,644,698" href="JohnTyler.mp3" />
-<area shape="poly" coords="822,516,894,454,989,515,982,711,812,687,810,550" href="JamesKPolk.mp3" />
-<area shape="poly" coords="1006,513,1068,453,1163,505,1157,707,999,686,983,609" href="ZacharyTaylor.mp3" />
-<area shape="poly" coords="1181,509,1238,455,1337,509,1329,691,1178,682,1159,603" href="MillardFillmore.mp3" />
-<area shape="poly" coords="1353,669,1346,499,1433,464,1503,491,1491,674,1410,697" href="FranklinPierce.mp3" />
-<area shape="poly" coords="1520,659,1514,486,1600,455,1686,505,1703,635,1683,690,1553,690" href="JamesBuchanan.mp3" />
-<area shape="poly" coords="1735,670,1703,537,1788,456,1865,480,1882,554,1878,689,1771,690" href="AbrahamLincoln.mp3" />
-<area shape="poly" coords="1892,664,1891,487,2018,456,2074,531,2073,651,2020,691,1934,691" href="AndrewJohnson.mp3" />
-<area shape="poly" coords="76,886,98,756,207,746,269,836,249,979,129,980" href="UlyssesSGrant.mp3" />
-<area shape="poly" coords="279,792,338,738,428,768,454,971,268,978" href="RutherfordBHayes.mp3" />
-<area shape="poly" coords="446,811,491,733,614,758,631,953,471,979" href="JamesAGarfield.mp3" />
-<area shape="poly" coords="643,941,630,761,728,723,817,780,813,957,707,983" href="ChesterAArthur.mp3" />
-<area shape="poly" coords="854,969,822,767,922,733,998,761,1006,934,996,977,972,983" href="GroverCleveland.mp3" />
-<area shape="poly" coords="1032,949,1016,767,1120,726,1201,772,1191,952,1155,987" href="BenjaminHarrison.mp3" />
-<area shape="poly" coords="1227,954,1207,757,1334,730,1383,814,1380,963,1294,980" href="WilliamMcKinely.mp3" />
-<area shape="poly" coords="1385,834,1386,740,1538,754,1558,897,1527,966,1399,963" href="TheodoreRoosevelt.mp3" />
-<area shape="poly" coords="1579,951,1548,761,1638,730,1735,767,1721,967" href="WilliamHTaft.mp3" />
-<area shape="poly" coords="1749,947,1745,765,1825,705,1905,759,1931,959,1792,974" href="WoodrowWilson.mp3" />
-<area shape="poly" coords="1932,795,2015,717,2128,793,2086,970,1978,973,1938,921" href="WarrenGHarding.mp3" />
-<area shape="poly" coords="101,1209,88,1043,185,993,273,1034,269,1253,168,1237" href="CalvinCoolidge.mp3" />
-<area shape="poly" coords="295,1214,285,1041,367,999,452,1047,449,1216,394,1260" href="HerbertCHoover.mp3" />
-<area shape="poly" coords="465,1220,459,1024,544,983,623,1021,627,1216,571,1271" href="FranklinDRoosevelt.mp3" />
-<area shape="poly" coords="638,1234,635,1036,777,998,809,1073,807,1233,764,1263" href="HarrySTruman.mp3" />
-<area shape="poly" coords="829,1208,817,1066,901,990,982,1033,999,1131,986,1249,868,1257" href="DwightDEisenhower.mp3" />
-<area shape="poly" coords="1010,1214,1005,1042,1084,989,1176,1034,1185,1156,1179,1262,1043,1244" href="JohnFKennedy.mp3" />
-<area shape="poly" coords="1199,1229,1190,1031,1275,983,1359,1029,1365,1215,1348,1260,1211,1237" href="LyndonBJohnson.mp3" />
-<area shape="poly" coords="1386,1238,1368,1038,1451,988,1543,1007,1546,1095,1545,1250,1518,1240" href="RichardMNixon.mp3" />
-<area shape="poly" coords="1566,1239,1549,1038,1612,993,1712,1019,1737,1102,1712,1246,1704,1248" href="GeraldRFord.mp3" />
-<area shape="poly" coords="1734,1237,1742,1058,1825,990,1919,1020,1913,1113,1909,1238" href="JamesEarlCarter.mp3" />
-<area shape="poly" coords="1932,1226,1931,1030,2016,991,2099,1045,2130,1155,2097,1255" href="RonaldReagan.mp3" />
-<area shape="poly" coords="768,1350,831,1290,954,1313,972,1417,962,1525,793,1504" href="GeorgeBush.mp3" />
-<area shape="poly" coords="997,1496,984,1319,1108,1282,1162,1312,1143,1532" href="WilliamJClinton.mp3" />
-<area shape="poly" coords="1181,1509,1163,1318,1230,1267,1317,1300,1344,1395,1328,1495" href="GeorgeWBush.mp3" />
-<area shape="poly" coords="1347,1325,1404,1256,1516,1290,1550,1527,1355,1499" href="BarackObama.mp3" />
+<area shape="poly" coords="55,115,77,90,121,108,124,190,46,181" href="GeorgeWashington.mp3" />
+<area shape="poly" coords="133,117,152,90,208,107,208,199,128,183,127,183" href="JohnAdams.mp3" />
+<area shape="poly" coords="215,101,256,98,278,120,281,184,209,189" href="ThomasJefferson.mp3" />
+<area shape="poly" coords="296,165,285,100,337,80,369,120,359,190,291,196" href="JamesMadison.mp3" />
+<area shape="poly" coords="367,175,374,103,406,84,444,111,444,186,402,202" href="JamesMonroe.mp3" />
+<area shape="poly" coords="460,168,445,91,515,88,521,181,514,195,451,191" href="JohnQuincyAdams.mp3" />
+<area shape="poly" coords="40,246,58,203,117,206,119,311,43,309" href="AndrewJackson.mp3" />
+<area shape="poly" coords="126,308,126,209,175,194,200,210,196,305" href="MartinVanBuren.mp3" />
+<area shape="poly" coords="205,294,201,211,245,191,281,218,268,302" href="WilliamHenryHarrison.mp3" />
+<area shape="poly" coords="277,295,282,205,343,201,344,307" href="JohnTyler.mp3" />
+<area shape="poly" coords="353,286,354,216,418,205,429,313,429,314" href="JamesKPolk.mp3" />
+<area shape="poly" coords="438,290,427,207,476,199,508,219,497,306,426,296" href="ZacharyTaylor.mp3" />
+<area shape="poly" coords="506,284,513,204,568,201,584,298,530,317" href="MillardFillmore.mp3" />
+<area shape="poly" coords="596,305,580,219,623,187,658,211,646,305" href="FranklinPierce.mp3" />
+<area shape="poly" coords="660,287,660,208,706,193,744,229,720,309" href="JamesBuchanan.mp3" />
+<area shape="poly" coords="743,294,743,193,797,209,815,308" href="AbrahamLincoln.mp3" />
+<area shape="poly" coords="821,289,810,201,892,201,900,305" href="AndrewJohnson.mp3" />
+<area shape="poly" coords="26,399,30,331,109,322,121,422,81,432" href="UlyssesSGrant.mp3" />
+<area shape="poly" coords="122,409,112,330,205,325,183,438" href="RutherfordBHayes.mp3" />
+<area shape="poly" coords="197,416,202,323,278,322,256,412" href="JamesAGarfield.mp3" />
+<area shape="poly" coords="275,405,274,325,359,329,350,422" href="ChesterAArthur.mp3" />
+<area shape="poly" coords="365,415,365,329,436,317,436,421" href="GroverCleveland.mp3" />
+<area shape="poly" coords="449,408,445,325,516,317,518,431" href="BenjaminHarrison.mp3" />
+<area shape="poly" coords="529,410,523,331,596,312,599,424" href="WilliamMcKinely.mp3" />
+<area shape="poly" coords="606,412,602,332,658,318,669,353,669,424" href="TheodoreRoosevelt.mp3" />
+<area shape="poly" coords="672,330,673,421,753,420,745,324" href="WilliamHTaft.mp3" />
+<area shape="poly" coords="768,419,747,332,820,315,827,423" href="WoodrowWilson.mp3" />
+<area shape="poly" coords="837,403,831,329,900,325,915,423" href="WarrenGHarding.mp3" />
+<area shape="poly" coords="48,511,36,442,124,441,121,539,64,543" href="CalvinCoolidge.mp3" />
+<area shape="poly" coords="131,523,130,437,197,444,191,542" href="HerbertCHoover.mp3" />
+<area shape="poly" coords="201,525,204,444,271,436,274,544" href="FranklinDRoosevelt.mp3" />
+<area shape="poly" coords="287,539,274,443,337,439,357,540" href="HarrySTruman.mp3" />
+<area shape="poly" coords="370,545,356,451,430,441,429,538,429,539" href="DwightDEisenhower.mp3" />
+<area shape="poly" coords="447,535,435,447,506,436,504,535" href="JohnFKennedy.mp3" />
+<area shape="poly" coords="530,531,515,439,599,442,572,527" href="LyndonBJohnson.mp3" />
+<area shape="poly" coords="604,532,602,436,678,439,657,530" href="RichardMNixon.mp3" />
+<area shape="poly" coords="677,532,682,435,751,438,736,540" href="GeraldRFord.mp3" />
+<area shape="poly" coords="754,519,756,442,828,435,825,545" href="JamesEarlCarter.mp3" />
+<area shape="poly" coords="838,527,836,440,905,437,912,552" href="RonaldReagan.mp3" />
+<area shape="poly" coords="341,646,337,567,422,562,414,660" href="GeorgeBush.mp3" />
+<area shape="poly" coords="428,642,421,556,506,553,496,659" href="WilliamJClinton.mp3" />
+<area shape="poly" coords="513,650,510,556,581,558,569,651" href="GeorgeWBush.mp3" />
+<area shape="poly" coords="585,639,581,555,673,560,670,650" href="BarackObama.mp3" />
 </map>
+
 <iframe name="audio" style="display:none;"></iframe>
 </body>
 </html>
