moved audio and fixed map

--- a/assignment0.html
+++ b/assignment0.html
@@ -5,7 +5,7 @@
     <title>Presidents of the USA</title>
 </head>
 <body>
-    <img src="[Presidents] (imported)" width="960" height="720" usemap="#map" />
+    <img src="Presidents.png" width="960" height="720" usemap="#map" />
 
 <map name="map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
