--- a/assignment0.html
+++ b/assignment0.html
@@ -5,9 +5,9 @@
     <title>Presidents of the USA</title>
 </head>
 <body>
-    <img src="Presidents.png" width="960" height="720" usemap="#map" />
+    <img src="Presidents.png" width="960" height="720" usemap="#Presidents.xcf" />
 
-<map name="map">
+<map name="Presidents.xcf">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
