added a alt for testing

--- a/assignment0.html
+++ b/assignment0.html
@@ -13,7 +13,7 @@
 <!-- #$-:Please do not edit lines starting with "#$" -->
 <!-- #$VERSION:2.3 -->
 <!-- #$AUTHOR:dshep -->
-<area shape="poly" coords="55,115,77,90,121,108,124,190,46,181" target="Audio" href="Audio/GeorgeWashington.mp3" />
+<area shape="poly" coords="55,115,77,90,121,108,124,190,46,181" target="Audio" alt="GeorgeWashington" href="Audio/GeorgeWashington.mp3" />
 <area shape="poly" coords="133,117,152,90,208,107,208,199,128,183,127,183" target="Audio" href="Audio/JohnAdams.mp3" />
 <area shape="poly" coords="215,101,256,98,278,120,281,184,209,189" target="Audio" href="Audio/ThomasJefferson.mp3" />
 <area shape="poly" coords="296,165,285,100,337,80,369,120,359,190,291,196" target="Audio" href="Audio/JamesMadison.mp3" />
