--- a/assignment0.html
+++ b/assignment0.html
@@ -13,49 +13,49 @@
 <!-- #$-:Please do not edit lines starting with "#$" -->
 <!-- #$VERSION:2.3 -->
 <!-- #$AUTHOR:dshep -->
-<area shape="poly" coords="55,115,77,90,121,108,124,190,46,181" target="Audio" alt="GeorgeWashington" href="Audio/GeorgeWashington.mp3" />
-<area shape="poly" coords="133,117,152,90,208,107,208,199,128,183,127,183" target="Audio" href="Audio/JohnAdams.mp3" />
-<area shape="poly" coords="215,101,256,98,278,120,281,184,209,189" target="Audio" href="Audio/ThomasJefferson.mp3" />
-<area shape="poly" coords="296,165,285,100,337,80,369,120,359,190,291,196" target="Audio" href="Audio/JamesMadison.mp3" />
-<area shape="poly" coords="367,175,374,103,406,84,444,111,444,186,402,202" target="Audio" href="Audio/JamesMonroe.mp3" />
-<area shape="poly" coords="460,168,445,91,515,88,521,181,514,195,451,191" target="Audio" href="Audio/JohnQuincyAdams.mp3" />
-<area shape="poly" coords="40,246,58,203,117,206,119,311,43,309" target="Audio" href="Audio/AndrewJackson.mp3" />
-<area shape="poly" coords="126,308,126,209,175,194,200,210,196,305" target="Audio" href="Audio/MartinVanBuren.mp3" />
-<area shape="poly" coords="205,294,201,211,245,191,281,218,268,302" target="Audio" href="Audio/WilliamHenryHarrison.mp3" />
-<area shape="poly" coords="277,295,282,205,343,201,344,307" target="Audio" href="Audio/JohnTyler.mp3" />
-<area shape="poly" coords="353,286,354,216,418,205,429,313,429,314" target="Audio" href="Audio/JamesKPolk.mp3" />
-<area shape="poly" coords="438,290,427,207,476,199,508,219,497,306,426,296" target="Audio" href="Audio/ZacharyTaylor.mp3" />
-<area shape="poly" coords="506,284,513,204,568,201,584,298,530,317" target="Audio" href="Audio/MillardFillmore.mp3" />
-<area shape="poly" coords="596,305,580,219,623,187,658,211,646,305" target="Audio" href="Audio/FranklinPierce.mp3" />
-<area shape="poly" coords="660,287,660,208,706,193,744,229,720,309" target="Audio" href="Audio/JamesBuchanan.mp3" />
-<area shape="poly" coords="743,294,743,193,797,209,815,308" target="Audio" href="Audio/AbrahamLincoln.mp3" />
-<area shape="poly" coords="821,289,810,201,892,201,900,305" target="Audio" href="Audio/AndrewJohnson.mp3" />
-<area shape="poly" coords="26,399,30,331,109,322,121,422,81,432" target="Audio" href="Audio/UlyssesSGrant.mp3" />
-<area shape="poly" coords="122,409,112,330,205,325,183,438" target="Audio" href="Audio/RutherfordBHayes.mp3" />
-<area shape="poly" coords="197,416,202,323,278,322,256,412" target="Audio" href="Audio/JamesAGarfield.mp3" />
-<area shape="poly" coords="275,405,274,325,359,329,350,422" target="Audio" href="Audio/ChesterAArthur.mp3" />
-<area shape="poly" coords="365,415,365,329,436,317,436,421" target="Audio" href="Audio/GroverCleveland.mp3" />
-<area shape="poly" coords="449,408,445,325,516,317,518,431" target="Audio" href="Audio/BenjaminHarrison.mp3" />
+<area shape="poly" coords="55,115,77,90,121,108,124,190,46,181" target="audio" alt="GeorgeWashington" href="Audio/GeorgeWashington.mp3" />
+<area shape="poly" coords="133,117,152,90,208,107,208,199,128,183,127,183" target="audio" href="Audio/JohnAdams.mp3" />
+<area shape="poly" coords="215,101,256,98,278,120,281,184,209,189" target="audio" href="Audio/ThomasJefferson.mp3" />
+<area shape="poly" coords="296,165,285,100,337,80,369,120,359,190,291,196" target="audio" href="Audio/JamesMadison.mp3" />
+<area shape="poly" coords="367,175,374,103,406,84,444,111,444,186,402,202" target="audio" href="Audio/JamesMonroe.mp3" />
+<area shape="poly" coords="460,168,445,91,515,88,521,181,514,195,451,191" target="audio" href="Audio/JohnQuincyAdams.mp3" />
+<area shape="poly" coords="40,246,58,203,117,206,119,311,43,309" target="audio" href="Audio/AndrewJackson.mp3" />
+<area shape="poly" coords="126,308,126,209,175,194,200,210,196,305" target="audio" href="Audio/MartinVanBuren.mp3" />
+<area shape="poly" coords="205,294,201,211,245,191,281,218,268,302" target="audio" href="Audio/WilliamHenryHarrison.mp3" />
+<area shape="poly" coords="277,295,282,205,343,201,344,307" target="audio" href="Audio/JohnTyler.mp3" />
+<area shape="poly" coords="353,286,354,216,418,205,429,313,429,314" target="audio" href="Audio/JamesKPolk.mp3" />
+<area shape="poly" coords="438,290,427,207,476,199,508,219,497,306,426,296" target="audio" href="Audio/ZacharyTaylor.mp3" />
+<area shape="poly" coords="506,284,513,204,568,201,584,298,530,317" target="audio" href="Audio/MillardFillmore.mp3" />
+<area shape="poly" coords="596,305,580,219,623,187,658,211,646,305" target="audio" href="Audio/FranklinPierce.mp3" />
+<area shape="poly" coords="660,287,660,208,706,193,744,229,720,309" target="audio" href="Audio/JamesBuchanan.mp3" />
+<area shape="poly" coords="743,294,743,193,797,209,815,308" target="audio" href="Audio/AbrahamLincoln.mp3" />
+<area shape="poly" coords="821,289,810,201,892,201,900,305" target="audio" href="Audio/AndrewJohnson.mp3" />
+<area shape="poly" coords="26,399,30,331,109,322,121,422,81,432" target="audio" href="Audio/UlyssesSGrant.mp3" />
+<area shape="poly" coords="122,409,112,330,205,325,183,438" target="audio" href="Audio/RutherfordBHayes.mp3" />
+<area shape="poly" coords="197,416,202,323,278,322,256,412" target="audio" href="Audio/JamesAGarfield.mp3" />
+<area shape="poly" coords="275,405,274,325,359,329,350,422" target="audio" href="Audio/ChesterAArthur.mp3" />
+<area shape="poly" coords="365,415,365,329,436,317,436,421" target="audio" href="Audio/GroverCleveland.mp3" />
+<area shape="poly" coords="449,408,445,325,516,317,518,431" target="audio" href="Audio/BenjaminHarrison.mp3" />
 <area shape="poly" coords="529,410,523,331,596,312,599,424" target="Audio" href="Audio/WilliamMcKinely.mp3" />
-<area shape="poly" coords="606,412,602,332,658,318,669,353,669,424" target="Audio" href="Audio/TheodoreRoosevelt.mp3" />
-<area shape="poly" coords="672,330,673,421,753,420,745,324" target="Audio" href="Audio/WilliamHTaft.mp3" />
-<area shape="poly" coords="768,419,747,332,820,315,827,423" target="Audio" href="Audio/WoodrowWilson.mp3" />
-<area shape="poly" coords="837,403,831,329,900,325,915,423" target="Audio" href="Audio/WarrenGHarding.mp3" />
-<area shape="poly" coords="48,511,36,442,124,441,121,539,64,543" target="Audio" href="Audio/CalvinCoolidge.mp3" />
-<area shape="poly" coords="131,523,130,437,197,444,191,542" target="Audio" href="Audio/HerbertCHoover.mp3" />
-<area shape="poly" coords="201,525,204,444,271,436,274,544" target="Audio" href="Audio/FranklinDRoosevelt.mp3" />
-<area shape="poly" coords="287,539,274,443,337,439,357,540" target="Audio" href="Audio/HarrySTruman.mp3" />
-<area shape="poly" coords="370,545,356,451,430,441,429,538,429,539" target="Audio" href="Audio/DwightDEisenhower.mp3" />
-<area shape="poly" coords="447,535,435,447,506,436,504,535" target="Audio" href="Audio/JohnFKennedy.mp3" />
-<area shape="poly" coords="530,531,515,439,599,442,572,527" target="Audio" href="Audio/LyndonBJohnson.mp3" />
-<area shape="poly" coords="604,532,602,436,678,439,657,530" target="Audio" href="Audio/RichardMNixon.mp3" />
-<area shape="poly" coords="677,532,682,435,751,438,736,540" target="Audio" href="Audio/GeraldRFord.mp3" />
-<area shape="poly" coords="754,519,756,442,828,435,825,545" target="Audio" href="Audio/JamesEarlCarter.mp3" />
-<area shape="poly" coords="838,527,836,440,905,437,912,552" target="Audio" href="Audio/RonaldReagan.mp3" />
-<area shape="poly" coords="341,646,337,567,422,562,414,660" target="Audio" href="Audio/GeorgeBush.mp3" />
-<area shape="poly" coords="428,642,421,556,506,553,496,659" target="Audio" href="Audio/WilliamJClinton.mp3" />
-<area shape="poly" coords="513,650,510,556,581,558,569,651" target="Audio" href="Audio/GeorgeWBush.mp3" />
-<area shape="poly" coords="585,639,581,555,673,560,670,650" target="Audio" href="Audio/BarackObama.mp3" />
+<area shape="poly" coords="606,412,602,332,658,318,669,353,669,424" target="audio" href="Audio/TheodoreRoosevelt.mp3" />
+<area shape="poly" coords="672,330,673,421,753,420,745,324" target="audio" href="Audio/WilliamHTaft.mp3" />
+<area shape="poly" coords="768,419,747,332,820,315,827,423" target="audio" href="Audio/WoodrowWilson.mp3" />
+<area shape="poly" coords="837,403,831,329,900,325,915,423" target="audio" href="Audio/WarrenGHarding.mp3" />
+<area shape="poly" coords="48,511,36,442,124,441,121,539,64,543" target="audio" href="Audio/CalvinCoolidge.mp3" />
+<area shape="poly" coords="131,523,130,437,197,444,191,542" target="audio" href="Audio/HerbertCHoover.mp3" />
+<area shape="poly" coords="201,525,204,444,271,436,274,544" target="audio" href="Audio/FranklinDRoosevelt.mp3" />
+<area shape="poly" coords="287,539,274,443,337,439,357,540" target="audio" href="Audio/HarrySTruman.mp3" />
+<area shape="poly" coords="370,545,356,451,430,441,429,538,429,539" target="audio" href="Audio/DwightDEisenhower.mp3" />
+<area shape="poly" coords="447,535,435,447,506,436,504,535" target="audio" href="Audio/JohnFKennedy.mp3" />
+<area shape="poly" coords="530,531,515,439,599,442,572,527" target="audio" href="Audio/LyndonBJohnson.mp3" />
+<area shape="poly" coords="604,532,602,436,678,439,657,530" target="audio" href="Audio/RichardMNixon.mp3" />
+<area shape="poly" coords="677,532,682,435,751,438,736,540" target="audio" href="Audio/GeraldRFord.mp3" />
+<area shape="poly" coords="754,519,756,442,828,435,825,545" target="audio" href="Audio/JamesEarlCarter.mp3" />
+<area shape="poly" coords="838,527,836,440,905,437,912,552" target="audio" href="Audio/RonaldReagan.mp3" />
+<area shape="poly" coords="341,646,337,567,422,562,414,660" target="audio" href="Audio/GeorgeBush.mp3" />
+<area shape="poly" coords="428,642,421,556,506,553,496,659" target="audio" href="Audio/WilliamJClinton.mp3" />
+<area shape="poly" coords="513,650,510,556,581,558,569,651" target="audio" href="Audio/GeorgeWBush.mp3" />
+<area shape="poly" coords="585,639,581,555,673,560,670,650" target="audio" href="Audio/BarackObama.mp3" />
 </map>
 
 <iframe name="audio" style="display:none;"></iframe>
