--- a/assignment0.html
+++ b/assignment0.html
@@ -36,7 +36,7 @@
 <area shape="poly" coords="275,405,274,325,359,329,350,422" target="audio" href="Audio/ChesterAArthur.mp3" />
 <area shape="poly" coords="365,415,365,329,436,317,436,421" target="audio" href="Audio/GroverCleveland.mp3" />
 <area shape="poly" coords="449,408,445,325,516,317,518,431" target="audio" href="Audio/BenjaminHarrison.mp3" />
-<area shape="poly" coords="529,410,523,331,596,312,599,424" target="Audio" href="Audio/WilliamMcKinely.mp3" />
+<area shape="poly" coords="529,410,523,331,596,312,599,424" target="audio" href="Audio/WilliamMcKinely.mp3" />
 <area shape="poly" coords="606,412,602,332,658,318,669,353,669,424" target="audio" href="Audio/TheodoreRoosevelt.mp3" />
 <area shape="poly" coords="672,330,673,421,753,420,745,324" target="audio" href="Audio/WilliamHTaft.mp3" />
 <area shape="poly" coords="768,419,747,332,820,315,827,423" target="audio" href="Audio/WoodrowWilson.mp3" />
