--- a/assignment1.html
+++ b/assignment1.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width">
-    <title> My Homepage </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+
+    <style>
+        .centerDiv{
+            position: fixed;
+            margin-left: 50%
+            margin-top 50%;
+        }
+        .noMargin{
+            margin: 0px;
+        }
+    </style>
+
 </head>
 <body>
-    <video controls="" autoplay="" name="media">
-        <source src="https://www.youtube.com/watch?v=5mF-p__slYU"
-         type="video/mp4"></video>
-    
+        <div class = "centerDiv">
+            <h1>
+                David Shepherd
+            </h1>
+            <h3>
+                Welcome to my webpage!
+            </h3>
+
+
+        </div>
+
     
 </body>
 </html>
