--- a/assignment1.html
+++ b/assignment1.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Webpage</title>
 
     <style>
         .centerDiv{
             position: fixed;
-            margin-left: 50%
-            margin-top 50%;
+            margin-left: 50%;
+            margin-top: 50%;
         }
         .noMargin{
             margin: 0px;
