--- a/assignment1.html
+++ b/assignment1.html
@@ -15,6 +15,11 @@
         .noMargin{
             margin: 0px;
         }
+        .rightList{
+            position: fixed;
+            right:10%;
+            top:10%;
+        }
     </style>
 
 </head>
@@ -26,9 +31,15 @@
             <h3>
                 Welcome to my webpage!
             </h3>
-
-
         </div>
+        <div>
+        <ul class = "rightList">
+            <li>About Me</li>
+            <li>Resume</li>
+            <li>Hobbies</li>
+            <li>Work</li>
+        </ul>
+    </div>
 
     
 </body>
