attempt to add video

--- a/assignment1.html
+++ b/assignment1.html
@@ -39,6 +39,12 @@
             <li>Work</li>
         </ul>
     </div>
+        <div class = "noMargin">
+            <video autoplay loop muted src="https://www.youtube.com/watch?v=wEF_jXQ-IqM">
+
+            </video>
+
+        </div>
 
     
 </body>
