added background video

--- a/assignment1.html
+++ b/assignment1.html
@@ -40,7 +40,7 @@
         </ul>
     </div>
         <div class = "noMargin">
-            <video autoplay loop muted src="https://www.youtube.com/watch?v=wEF_jXQ-IqM">
+            <video autoplay loop muted src="background.mp4">
 
             </video>
 
