changed color of h1

--- a/assignment1.html
+++ b/assignment1.html
@@ -7,6 +7,9 @@
     <title>My Webpage</title>
 
     <style>
+        h1{
+            color: white;
+        }
         .centerDiv{
             margin-left: 50%;
             margin-top: 50%;
