added div above video

--- a/assignment1.html
+++ b/assignment1.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-        
+        <div>
         <div class = "noMargin">
                 <video autoplay loop muted src="background.mp4">
                     
