--- a/assignment1.html
+++ b/assignment1.html
@@ -7,7 +7,9 @@
     <title>My Webpage</title>
 
     <style>
-        
+        h1{
+            color: white;
+        }
         .centerDiv{
             position:fixed;
             margin-left: 50%;
