changed background size

--- a/assignment1.html
+++ b/assignment1.html
@@ -18,6 +18,7 @@
         .noMargin{
             margin: 0px;
             background-size: 100%;
+            background: 100%;
         }
         .rightList{
             position: fixed;
