added color to list

--- a/assignment1.html
+++ b/assignment1.html
@@ -10,6 +10,9 @@
         h1{
             color: white;
         }
+        li{
+            color:white;
+        }
         .centerDiv{
             position:fixed;
             margin-left: 50%;
