--- a/assignment1.html
+++ b/assignment1.html
@@ -13,6 +13,9 @@
         li{
             color:white;
         }
+        h3{
+            color:white;
+        }
         .centerDiv{
             position:fixed;
             margin-left: 40%;
