undid a style change

--- a/assignment1.html
+++ b/assignment1.html
@@ -7,10 +7,13 @@
     <title>My Webpage</title>
 
     <style>
-        h1 + h3{
+        h1{
             color: white;
         }
         li{
+            color:white;
+        }
+        h3{
             color:white;
         }
     
