added arial font to the list

--- a/assignment1.html
+++ b/assignment1.html
@@ -13,6 +13,7 @@
         }
         li{
             color:white;
+            font-family: "Arial", Arial, sans-serif;
         }
         h3{
             color:white;
