--- a/assignment1.html
+++ b/assignment1.html
@@ -28,6 +28,7 @@
         .noMargin{
             margin: 0px;
             width:100%;
+            height:100%;
             
         }
         .rightList{
