--- a/assignment1.html
+++ b/assignment1.html
@@ -26,8 +26,10 @@
             margin-top: 25%;
         }
         .noMargin{
-            position:fixed;
+
             margin: 0px;
+            right: 0;
+            bottom: 0;
             min-width:100%;
             min-height:100%;
             
