--- a/assignment1.html
+++ b/assignment1.html
@@ -30,8 +30,8 @@
             margin: 0px;
             right: 0;
             bottom: 0;
-            min-width:100%;
-            min-height:100%;
+            width:100%;
+            height:100%;
             
         }
         .rightList{
