--- a/assignment1.html
+++ b/assignment1.html
@@ -27,14 +27,11 @@
         }
         .noMargin{
 
-            position: absolute;
-                top: 0px;
-                right: 0px;
-                bottom: 0px;
-                left: 0px;
-                max-height: 100%;
-                max-width: 100%;
-                margin: auto;
+            margin: 0px;
+            right: 0;
+            bottom: 0;
+            width:100%;
+            height:100%;
             
         }
         .rightList{
