--- a/assignment1.html
+++ b/assignment1.html
@@ -28,8 +28,8 @@
         .noMargin{
 
             margin: 0px;
-            width:100%;
-            height:100%;
+            width: 100%;
+            height: auto;
             
         }
         .rightList{
