--- a/assignment1.html
+++ b/assignment1.html
@@ -27,9 +27,9 @@
         }
         .noMargin{
 
-
+            position:relative;
             width: 100%;
-            height: auto;
+            height: 100vh;
             
         }
         .rightList{
