--- a/assignment1.html
+++ b/assignment1.html
@@ -75,8 +75,9 @@
            
         <div>
          <ul class = "rightList">
-            
+                <i class="fas fa-atom">
                         <li>About Me</li>
+                        </i>
                         <li>Resume</li>
                         <li>Hobbies</li>
                         <li>Work</li>
