attempt to implement icon in list

--- a/assignment1.html
+++ b/assignment1.html
@@ -75,9 +75,8 @@
            
         <div>
          <ul class = "rightList">
-                <i class="fas fa-atom">
+                <i class="fas fa-atom"></i>
                         <li>About Me</li>
-                        </i>
                         <li>Resume</li>
                         <li>Hobbies</li>
                         <li>Work</li>
