--- a/assignment1.html
+++ b/assignment1.html
@@ -78,8 +78,8 @@
              <ul class ="fa-ul">
                         <li><i class="fa-li fa fa-spinner fa-spin"></i>About Me</li>
                         <li><i class="fa-li fa fa-check-square"></i>Resume</li>
-                        <li><i class="fas fa-football-ball"></i>Hobbies</li>
-                        <li><i class="fas fa-laptop-code"></i>Work</li>
+                        <li><i class="fas fa-stroopwafel fa-spin"></i>Hobbies</li>
+                        <li><i class="fas fa-cog fa-spin"></i>Work</li>
                     </ul>
                     </ul>
                 
