--- a/assignment1.html
+++ b/assignment1.html
@@ -79,7 +79,7 @@
                         <li><i class="fa-li fa fa-spinner fa-spin"></i>About Me</li>
                         <li><i class="fa-li fa fa-check-square"></i>Resume</li>
                         <li><i class="fa-li fa fa-square"></i>Hobbies</li>
-                        <li><i class="fa fa-cog fa-spin"></i>Work</li>
+                        <li><i class="fa-li fa-cog fa-spin"></i>Work</li>
                 </ul>
                     </ul>
                 
