tried to style the 2 non moving icons

--- a/assignment1.html
+++ b/assignment1.html
@@ -77,8 +77,8 @@
          <ul class = "rightList">
              <ul class ="fa-ul">
                         <li><i class="fa-li fa fa-spinner fa-spin"></i>About Me</li>
-                        <li><i class="fa-li fa fa-check-square"></i>Resume</li>
-                        <li><i class="fa-li fa fa-square"></i>Hobbies</li>
+                        <li><i class="fa-li fa fa-check-square fa-pulse"></i>Resume</li>
+                        <li><i class="fa-li fa fa-square fa-pulse"></i>Hobbies</li>
                         <li><i class="fa-li fa fa-cog fa-spin"></i>Work</li>
                 </ul>
                     </ul>
