--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class = "rightList">
                 <ul class ="fa-ul">
                            <li><i class="fa-li fa fa-spinner fa-spin"></i>About Me</li>
-                           <li><i class="fa-li fa fa-check-square"></i>Resume</li>
+                           <li><i class="fa-li fa fa-check-square"></i><a href="file:///C:/Users/dshep/OneDrive/Documents/COMP335/resume.html">My Resume</a></li>
                            <li><i class="fa-li fa fa-square"></i>Hobbies</li>
                            <li><i class="fa-li fa fa-cog fa-spin"></i>Work</li>
                    </ul>
