added background to wepage

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 </head>
-<body>
+<body background = "City_Landscape_Background.jpg">
     <div>
     <!--This is a comment-->
     <h1>David Shepherd</h1>
@@ -62,10 +62,7 @@
                        </ul>
                    
                    </div>
-                   <div class = "backgroundImage">
-                        <background-image></background-image>
-            
-                    </div>
+
 </body>
 </html>
 
