tried to fix repeating background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin-top: 25%;
         }
         .backgroundImage{
-
+        background-image: image("City_Landscape_Background: NaNjpg;");
         position:fixed;
         width: 100%;
         height: 100vh;
@@ -45,7 +45,7 @@
 
 
 </head>
-<body background = "City_Landscape_Background.jpg">
+<body>
     <div>
     <!--This is a comment-->
     <h1>David Shepherd</h1>
