tried to fix background

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             margin-left: 40%;
             margin-top: 25%;
         }
-        .backgroundImage{
+        body{
         background-image: image("City_Landscape_Background: NaNjpg;");
         position:fixed;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         z-index: -1000;
         top: 0;
         left: 0;
