tried adding a background image

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             margin-top: 25%;
         }
         body{
-        background-image: image("City_Landscape_Background: NaNjpg;");
-
+        background-image:url("City_Landscape_Background.jpg");
+        background-repeat: no-repeat;
         }
 
     
