added a z index to body

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         body{
             background-image: url("City_Landscape_Background.jpg");
+            z-index: -1;
             height: 100%;
             margin: 0;
             background-position: center;
