tried to fix background

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         body{
             background-image: url("City_Landscape_Background.jpg");
             z-index: -1;
-            height: 100%;
+            height: 100vh;
+            width: 100%;
             margin: 0;
             background-position: center;
             background-repeat: no-repeat;
