--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         body{
             background-image: url("City_Landscape_Background.jpg");
             z-index: -1;
-            height: 100vh;
-            width: 100%;
             margin: 0;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            min-height: 100%;
+            min-width: 100%;
         }
         
 
