--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin: 0;
             background-position: center;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: auto;
             min-height: 100%;
             min-width: 100%;
         }
