--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size:cover;
-            min-height: 100%;
+            min-height: 100vh;
             min-width: 100%;
         }
         
