--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size:cover;
-            min-height: 100%;
-            min-width: 100%;
+            height: 100%;
+            width: 100%;
         }
         
         
@@ -39,6 +39,7 @@
     <div class = "centerDiv">
     <!--This is a comment-->
     <h1>David Shepherd</h1>
+    <h3>Welcome to my page!</h3>
                 </div>
 
     <div>
