--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
 
     <div>
             <ul class = "rightList">
-                <ul class ="fa-ul">
+                <ul class = "fa-ul">
+                    <ul class = "desktop">
                            <li><i class="fa-li fa fa-spinner fa-spin"></i>About Me</li>
                            <li><i class="fa-li fa fa-check-square"></i><a href="https://dshepherd702.github.io/resume.html">My Resume</a></li>
                            <li><i class="fa-li fa fa-square"></i>Hobbies</li>
                            <li><i class="fa-li fa fa-cog fa-spin"></i>Work</li>
                    </ul>
                        </ul>
+                    </ul>
                    
                    </div>
                    
