--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="mobile.css" media="screen and (max-width:720px)">
     <link href="tablet.css" media="screen and (min-width:721px) and (max-width:960px)">
     <link href="desktop.css" media="screen and (min-width:961px)">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstr ap/4.3.1/css/bootstrap.min.css">
     <title>My First Webpage</title>
     <style>
         .rightList{
