--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <ul class = "fa-ul">
                     
                            <li><i class="fa-li fa fa-spinner fa-spin"></i>About Me</li>
-                           <li><i class="fa-li fa fa-check-square"></i><a href="https://dshepherd702.github.io/resume.html">My Resume</a></li>
+                           <li><i class="fa-li fa fa-check-square"></i><a href="file:///C:/Users/dshep/Downloads/David%20Shepherd%20Resume.pdf">My Resume</a></li>
                            <li><i class="fa-li fa fa-square"></i>Hobbies</li>
                            <li><i class="fa-li fa fa-cog fa-spin"></i>Work</li>
                    </ul>
