--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
     
     <h1>My Resume!</h1>
-    <iframe src="file:///C:/Users/dshep/Downloads/David%20Shepherd%20Resume.pdf" width="100%" height="500px">
+    <iframe src="file:///C:/Users/dshep/Downloads/David%20Shepherd%20Resume.pdf" width="100%" height="100vh">
     </iframe>
 </body>
 </html>
