changed source code for pdf

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
     
     <h1>My Resume!</h1>
-    <iframe src="file:///C:/Users/dshep/Downloads/David Shepherd Resume.pdf" width="100%" height="1000px">
-    </iframe>
+    <embed src="file:///C:/Users/dshep/Desktop/David Shepherd Resume.pdf" width="100%" height="1000px">
+    </embed>
 </body>
 </html>
