--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,9 @@
 <body>
     
     <h1>My Resume!</h1>
+    <iframe>
     <embed src="file:///C:/Users/dshep/Desktop/David Shepherd Resume.pdf" width="100%" height="1000px">
     </embed>
+</iframe>
 </body>
 </html>
