--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,9 @@
     
     <h1>My Resume!</h1>
     
-    <embed type = "application/pdf"
+    <iframe type = "application/pdf"
      src="file:///C:/Users/dshep/Desktop/David Shepherd Resume.pdf" width="100%" height="1000px">
-    </embed>
+    </iframe>
 
 </body>
 </html>
