--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <h1>My Resume!</h1>
     
     <iframe type = "application/pdf"
-     src="file:///C:/Users/dshep/Desktop/David Shepherd Resume.pdf" width="100%" height="1000px">
+     src="David Shepherd Resume.pdf" width="100%" height="1000px">
     </iframe>
 
 </body>
