--- a/resume.html
+++ b/resume.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstr ap/4.3.1/css/bootstrap.min.css">
     <title>Resume</title>
 </head>
 <body>
-    
+    <div class="container-fluid">
     <h1>My Resume!</h1>
+        <div class="row">
+            <div class="col-lg-6" style="background-color:yellow;">
+            </div>
+        </div>
+    </div>
+
     
     <iframe type = "application/pdf"
      src="David Shepherd Resume.pdf" width="100%" height="1000px">
