--- a/aboutme.html
+++ b/aboutme.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstr ap/4.3.1/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
         <div class="container-fluid">
-                <h1>Hello World!</h1>
+                <h1>About Me</h1>
                 <div class="row">
-                  <div class="col-lg-6" style="background-color:yellow;">
-                    <p>Lorem ipsum...</p>
+                  <div class="col-lg-6" style="background-color:blue;">
+                    <p>Hi,my name is David Shepherd and I am a Senior at Bridgewater State University studying Computer Science.
+                        I hope once I graduate that I can land a job in Cyber Security but I am open to other jobs as well.
+
+                    </p>
                   </div>
-                  <div class="col-lg-6" style="background-color:pink;">
-                    <p>Sed ut perspiciatis...</p>
+                  <div class="col-lg-6" style="background-color:red;">
+                    <p>Some things I enjoy to do are sports, gaming, and going to the beach.
+                        For sports I play baseball and basketball.
+                        For gaming I stream occassionally on the platform twitch where I have an affilliate partnership but I usually just do it for fun.
+                        I live in a town that has 5 beaches so they are very acessible, I really enjoy spending summer days lounging.
+                    </p>
                   </div>
                 </div>
               </div>
