changed colors behind text

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,13 +11,13 @@
         <div class="container-fluid">
                 <h1>About Me</h1>
                 <div class="row">
-                  <div class="col-lg-6" style="background-color:blue;">
+                  <div class="col-lg-6" style="background-color:green;">
                     <p>Hi,my name is David Shepherd and I am a Senior at Bridgewater State University studying Computer Science.
                         I hope once I graduate that I can land a job in Cyber Security but I am open to other jobs as well.
 
                     </p>
                   </div>
-                  <div class="col-lg-6" style="background-color:red;">
+                  <div class="col-lg-6" style="background-color:teal;">
                     <p>Some things I enjoy to do are sports, gaming, and going to the beach.
                         For sports I play baseball and basketball.
                         For gaming I stream occassionally on the platform twitch where I have an affilliate partnership but I usually just do it for fun.
