moved the </a> so the about me link would work

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <ul class = "desktop">
                     <ul class = "fa-ul">
                     
-                           <li><i class="fa-li fa fa-spinner fa-spin"></i><a href="https://dshepherd702.github.io/aboutme.html"></a>About Me</li>
+                           <li><i class="fa-li fa fa-spinner fa-spin"></i><a href="https://dshepherd702.github.io/aboutme.html">About Me</a></li>
                            <li><i class="fa-li fa fa-check-square"></i><a href="https://dshepherd702.github.io/resume.html">My Resume</a></li>
                            <li><i class="fa-li fa fa-square"></i>Hobbies</li>
                            <li><i class="fa-li fa fa-cog fa-spin"></i>Work</li>
