added comments to show where bootstrap and @media tags were used

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+        <!--Bootstrap is used here to make the text re adjust itself for whatever size the webpage is.-->
         <div class="container-fluid">
                 <h1>About Me</h1>
                 <div class="row">
