--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
     <div>
             <ul class = "rightList">
+                <!--Media Tag is used here to make list dissappear if screen is to small.-->
                 <ul class = "desktop">
                     <ul class = "fa-ul">
                     
